--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-SEVERITY=BLOCKER,CRITICAL
+SEVERITY=BLOCKER,CRITICAL,MAJOR
 OUTPUT_LOCATION=/Users/anda/workspace/projects/git-hosted/sonar-digest/data/results/%s-%s.csv
 COMPONENTS_URI=http://localhost:9000/api/resources
 ISSUES_URI=http://localhost:9000/api/issues/search?componentRoots=%s&statuses=OPEN,REOPENED,CONFIRMED&severities=%s&p=%d
